smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace-defined-twice.smithy
// Parse error at line 4, column 10 near ` com`: Only a single namespace can be declared per/file
$version: "1.0"
namespace com.foo
namespace com.baz
